--- a/LocalChatServerWeb/LocalChatServerWeb.csproj
+++ b/LocalChatServerWeb/LocalChatServerWeb.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
+  </ItemGroup>
+
 </Project>
