--- a/LocalChatServerWeb/LocalChatServerWeb.csproj
+++ b/LocalChatServerWeb/LocalChatServerWeb.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
