--- a/LocalChatServerWeb/Properties/launchSettings.json
+++ b/LocalChatServerWeb/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7209;http://localhost:5150",
+      "applicationUrl": "https://localhost:7209;http://localhost:5150;https://*:7209",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
